<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_white_24dp"
            android:title="@string/nav_title_messages" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_people_white_24dp"
            android:title="@string/nav_title_contacts" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/nav_title_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_title_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_title_about"
            />
    </group>

</menu>
