<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/add_child_dialog_layout_margin">



    <android.support.constraint.ConstraintLayout android:layout_height="wrap_content"
        android:layout_width="@dimen/add_child_dialog_width"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="@dimen/add_child_dialog_horizontal_margin"
        android:layout_marginEnd="@dimen/add_child_dialog_horizontal_margin"
        android:layout_marginBottom="@dimen/add_child_dialog_vertical_margin"
        >

        <TextView
            android:id="@+id/tv_add_child_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_child_dialog_title_height"
            android:text="@string/add_child_dialog_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/et_add_child_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_add_child_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/add_child_dialog_name_hint"
            android:gravity="center_horizontal"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_add_child_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_add_child_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/add_child_dialog_date_of_birth_hint"
            android:gravity="center_horizontal"
            android:inputType="date"
            />

        <RadioGroup
            android:id="@+id/rg_add_child_radiogroup"
            app:layout_constraintTop_toBottomOf="@id/et_add_child_date_of_birth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rb_sex_male"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sex_male"
                />
            <RadioButton
                android:id="@+id/rb_sex_female"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sex_female"
                />

        </RadioGroup>



        <Button
            android:id="@+id/b_add_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/add_child_add_button"
            app:layout_constraintTop_toBottomOf="@id/rg_add_child_radiogroup"
            app:layout_constraintRight_toRightOf="parent"
            />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>