<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/create_chat_dialog_layout_margin">



<android.support.constraint.ConstraintLayout android:layout_height="wrap_content"
    android:layout_width="@dimen/create_chat_dialog_width"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/create_chat_dialog_horizontal_margin"
    android:layout_marginEnd="@dimen/create_chat_dialog_horizontal_margin"
    android:layout_marginBottom="@dimen/create_chat_dialog_vertical_margin"
    >

    <TextView
        android:id="@+id/tv_new_chat_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/create_chat_dialog_title_height"
        android:text="@string/chat_create_dialog_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/et_new_chat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_new_chat_dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/chat_info_enter_chat_name_hint"
        android:gravity="center_horizontal"
        />

    <com.akhris.pregnytalk.ui.PlacesSearchView
        android:id="@+id/psv_new_chat_place_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_new_chat_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ib_new_chat_map"
        app:queryHint="@string/chat_info_location_query_hint"
        app:iconifiedByDefault="false"
        android:textAlignment="center"
        />

    <ImageButton
        android:id="@+id/ib_new_chat_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_location_on_black_24dp"
        android:tint="@color/secondaryColor"
        app:layout_constraintTop_toTopOf="@id/psv_new_chat_place_search"
        app:layout_constraintBottom_toBottomOf="@id/psv_new_chat_place_search"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_margin="@dimen/create_chat_dialog_layout_margin"
        />

    <Button
        android:id="@+id/b_chat_info_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/chat_info_button_ok"
        app:layout_constraintTop_toBottomOf="@id/psv_new_chat_place_search"
        app:layout_constraintRight_toRightOf="parent"
        />


</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>