<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/cl_user_info_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_info_app_bar_height">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp"
                app:titleEnabled="false"
                >


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                    />

                <ImageView
                    android:id="@+id/iv_user_info_picture"
                    android:layout_width="@dimen/user_info_picture_dimen"
                    android:layout_height="@dimen/user_info_picture_dimen"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_add_a_photo_32dp"
                    android:contentDescription="@string/content_description_user_avatar"
                    android:transitionName="@string/transition_user_info_photo"
                    />

                <ImageView
                    android:id="@+id/iv_user_info_add_to_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/primaryLightColor"
                    android:layout_margin="@dimen/user_info_icon_layout_margin"
                    android:layout_gravity="end|top"
                    android:contentDescription="@string/content_description_user_add_to_contacts"
                    />

                <EditText
                    android:id="@+id/et_user_info_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_info_username_hint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center_horizontal"
                    />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

       <android.support.v4.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"
           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               >

               <android.support.v7.widget.RecyclerView
                   android:id="@+id/rv_user_info_details_list"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"

                   />

               <com.akhris.pregnytalk.ui.SwipeableRecyclerView
                   android:id="@+id/rv_user_info_children_list"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>

           </LinearLayout>


       </android.support.v4.widget.NestedScrollView>





</android.support.design.widget.CoordinatorLayout>